--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -4,3 +4,11 @@
 # |  _|   | |_| | |  _ <    | |    /  \
 # |_|      \___/  |_| \_\   |_|   /_/\_\
 
+
+
+report:
+  self: "&cYou cannot report yourself!"
+  offline: "&cYou cannot report an offline player!"
+  bypass: "&cYou cannot report a player with a bypass permission!"
+  message: "&c{Player} reported {Target} for {Reason}!"
+  reason: "&cYou must provide a reason for the report!"
