Full redis support, report command working. Also added admin chat and server name configuration.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,3 +24,6 @@ redis:
     report: "report"
     helpop: "helpop"
 
+# If multiserver is enabled, change this to the name of your server.
+server:
+  name: "lobby" # The name of your server, used for multiserver support.
