Minor changes (Major lol)

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -16,3 +16,6 @@ report:
 
 adminchat:
   format: "&c[ADMIN] &f{Player}: &7{Message}"
+
+history:
+  offline: "&cYou cannot view the reports history of an offline player!"
