--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,11 @@ multiserver:
   enabled: false # Enable multiserver support (requires a redis database)
 
 
+history:
+  enabled: true
+  max_player: 100 # Maximum number of reports to keep in history for each player.
+  max_report: 100 # Maximum number of reports stored globally. (for all players)
+
 # If multiserver is enabled, you need to set up a Redis database.
 redis:
   host: "localhost"
